--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: minima
 title: wilma's pages
 author: wilma van wezenbeek
-description: I like to write. I like to listen, observe and then see opportunities or connections. All about #libraries #communities #knowledgeequity #openscience #openaccess #openeducation #connectingtheopens #myownopinion 
+description: I like to write. I like to listen, observe and then see opportunities or connections. 
+All about #libraries #communities #knowledgeequity #openscience #openaccess #openeducation #connectingtheopens #myownopinion 
