--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: minima
+theme: cayman
 title: wilma's pages
 author: wilma van wezenbeek
 description: I like to write, listen, observe and then see opportunities or connections. 
