--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: cayman
-title: wilma's pages
+title: Observations, Opinions and Opens 
 author: wilma van wezenbeek
-description: I like to write, listen, observe and then see opportunities or connections. 
+description: I like to write, listen, observe and then see opportunities or connections
