--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
-theme: cayman
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme 
 title: Observations, Opinions and Opens 
 author: wilma van wezenbeek
 description: I like to write, listen, observe and then see opportunities or connections
