--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme 
-title: Observations, Opinions and Opens 
+title: Observations, Opinions & Opens 
 author: wilma van wezenbeek
 description: I like to write, listen, observe and then see opportunities or connections
