--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-tactile
 title: Observations, Opinions & Opens 
 author: wilma van wezenbeek
-url: "https://github.com/wvanwezenbeek"
+affiliation: https://github.com/wvanwezenbeek
 description: I like to write, listen, observe and then see opportunities or connections
