--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-theme: jekyll-theme-tactile
+theme: minima skin:sunrise
 title: Observations, Opinions & Opens 
 author: wilma van wezenbeek
-affiliation: https://github.com/wvanwezenbeek
-description: I like to write, listen, observe and then see opportunities or connections
+github: https://github.com/wvanwezenbeek
+description:  #libraries #communities #knowledgeequity #openscience #openaccess #openeducation #connectingtheopens #myownopinion
