--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima "minima: skin:sunrise"
 title: Observations, Opinions & Opens 
 author: wilma van wezenbeek
-description:  #libraries #communities #knowledgeequity #openscience #openaccess #openeducation #connectingtheopens #myownopinion
+description:  About libraries, open science, open access,  open education, communities, knowledgeequity (all my own opinion)
