--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: minima "minima: skin:sunrise"
+theme: minima 
 title: Observations, Opinions & Opens 
-author: wilma van wezenbeek
-description:  About libraries, open science, open access,  open education, communities, knowledgeequity (all my own opinion)
+author: Wilma van Wezenbeek
+description:  #libraries #openscience #openaccess #openeducation #connectingtheopens #communities #knowledgeequity #myownopinion
