--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima 
 title: Observations, Opinions & Opens 
 author: Wilma van Wezenbeek
-description:  #libraries #openscience #openaccess #openeducation #connectingtheopens #communities #knowledgeequity #myownopinion
+description: About libraries, open science, open access, open education, connecting the opens, knowledge equity (all my own opinion) 
